package org.jqassistant.contrib.asciidoctorj.reportrepo.model;

import lombok.Getter;
import lombok.experimental.SuperBuilder;

@SuperBuilder(toBuilder = true)
@Getter
public class Concept extends AbstractExecutableRule{

}
