package org.jqassistant.tooling.asciidoctorj.reportrepo.model;

import lombok.Getter;
import lombok.experimental.SuperBuilder;

@SuperBuilder(toBuilder = true)
@Getter
public class Constraint extends AbstractExecutableRule {

}
